appId: com.newroztech.gamewallet
tags:
  - smoke
  - regression
---
- launchApp
    
- assertVisible:
    id: languageIcon
- assertVisible: EN
- assertVisible:
    id: appLogo
- assertVisible:
    id: chatIcon
- tapOn:
    id: chatIcon

- assertVisible:
    id: appLogo
- assertVisible: LIVE CHAT

- assertVisible: Logo
- assertVisible: ZiDesk
- assertVisible: Online
- assertVisible: سڵاو، بەخێربێیت بۆ پاڵپشتی زیچارج. تکایە کێشەکەت یان پرسیارەکەت بنووسە.
- assertVisible: مرحباً بك في دعم زيجارج. يرجى طرح مشكلتك أو سؤالك.
- assertVisible: Welcome to Zicharge Support. Please state your issue or question.
- assertVisible: Type your message...
- assertVisible: Attach file
- assertVisible:
    id: babylon-chat-send
- tapOn:
    id: babylon-chat-input
- inputText: This is my first Trade
- hideKeyboard

- tapOn:
    id: babylon-chat-send
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: goBackBtn
- assertVisible: BACK
- tapOn:
    id: goBackText
- assertVisible: |-
    WELCOME 
    BACK
- assertVisible: |-
    Login to your account with your 
    Mobile number
- assertVisible: 🇮🇶  +964
- assertVisible:
    id: downArrow

#- assertVisible: Your phone number here
#- tapOn:
  #  id: customEditText

#- eraseText: 10

#- inputText: "${Mobile_Number}"

#- assertVisible: Password
#- tapOn:
 #   id: customEditTextView

#- inputText: "${Password}"
#- tapOn:
 #   id: customEditTextEndImageView
  #  index: 1
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${Mobile_Number}"
      PASSWORD: "${Password}"
#- assertVisible: Forgot Password

#- assertVisible: You don't have account yet?
#- assertVisible: CREATE NEW ACCOUNT

#- runFlow:
#    when:
#      visible: LOGIN
#    commands:
#      - tapOn: LOGIN
- runFlow:
    file: ../../flows/teardown.yaml