appId: com.newroztech.gamewallet
tags:
  - smoke
  - regression
  - P0
  - Functional
---
#Runflow use for the first login file the this file is exceuted
- launchApp

#Using ENV LOgin the app
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${Mobile_Number}"
      PASSWORD: "${Password}"
- assertVisible:
    id: bannerImage
- tapOn:
    id: closeBtn

- tapOn:
    id: referelLayout

- assertVisible:
    id: appLogo
- assertVisible:
    id: notificationIcon
- tapOn:
    id: notificationIcon
- tapOn: BACK
- assertVisible: CRYPTO REQUEST
- assertVisible:
    id: transactionImageView
- assertVisible:
    id: transactionTypeTextView
- assertVisible:
    id: transactionAmountTextView
- assertVisible:
    id: transactionNetworkTextView
- assertVisible:
    id: transactionStatusText
- assertVisible:
    id: transactionDateTextView
- assertVisible:
    id: transactionOrderIdTextView
- tapOn:
    id: copyBtnImageView
# Scroll down twice
- scroll
- scroll

# Scroll up once (fixed)
- swipe:
    start: 50%,30%
    end: 50%,80%
- tapOn: BACK
- waitForAnimationToEnd

- runFlow:
    file: ../../flows/teardown.yaml
