appId: com.newroztech.gamewallet
tags:
  - smoke
  - regression
  - P0
  - Functional
---
#Runflow use for the first login file the this file is exceuted
- launchApp

#Using ENV LOgin the app
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${Mobile_Number}"
      PASSWORD: "${Password}"
- assertVisible:
    id: bannerImage
- tapOn:
    id: closeBtn

- tapOn:
    id: topUpLayout
- assertVisible:
    id: notificationIcon
- assertVisible: TopUp
- assertVisible:
    id: getwayIconImageView
- assertVisible: Crypto
- assertVisible:
    id: getwayIconImageView
    index: 1
- assertVisible: ZiGift Card
- assertVisible:
    id: getwayIconImageView
    index: 2
- assertVisible: Deposit Trade
- assertVisible:
    id: customEditTextStartImageView
- assertVisible: Currency
- assertVisible:
    id: customEditTextEndImageView
- assertVisible: Please select Currency
- assertVisible:
    id: customEditTextStartImageView
    index: 1
- assertVisible: Network
- assertVisible:
    id: customEditTextEndImageView
    index: 1
- assertVisible: IQD
- assertVisible: Amount
- assertVisible: Please enter amount in IQD to Deposit
- assertVisible:
    id: networkHintInfo

- assertVisible: DEPOSIT
- tapOn: Currency
- assertVisible: CURRENCY LIST
- assertVisible: Please select cryptocurrencies from below list.
- assertVisible:
    id: customEditTextStartImageView
- assertVisible: Search

- runScript:
    file: randomcurrency.js
    env:
      currencies: "BTC,ETH,USDT,TRX,BNB,BUSD,USDB,DAI,SHIB"

- scrollUntilVisible:
    element:
      text: ${output.selectedCurrency}
    direction: DOWN

- tapOn:
    text: ${output.selectedCurrency}

- tapOn: Network
- assertVisible:
    id: content
- tapOn:
    id: content
- assertVisible: IQD
- tapOn: Amount
- inputText: "500"
- hideKeyboard
- assertVisible:
    id: withdrawBalance
- runFlow:
    when:
      visible: DEPOSIT
    commands:
      - tapOn: DEPOSIT

- assertVisible: IQD Amount
- assertVisible:
    id: amountIQD

- assertVisible: "Deposit Crypto Balance:"
- assertVisible:
    id: depositCryptoBalance
- assertVisible: Please transfer Crypto Balance to below address
- assertVisible:
    id: receiverWalletAddressImage
- assertVisible: Receiver wallet address
- assertVisible:
    id: receiverAddress
- assertVisible: COPY
- tapOn: COPY
- assertVisible: "* Click on the copy button if you unable to scan QR code"
- assertVisible:
    id: addressValidTimeText

- assertVisible:
    id: qrCodeImage
- assertVisible: QR Code
- assertVisible:
    id: qrCode
- scroll
- runFlow:
    when:
      visible: REQUEST HISTORY
    commands:
      - assertVisible: REQUEST HISTORY
      - tapOn: REQUEST HISTORY
- waitForAnimationToEnd
- runFlow:
    file: ../../flows/teardown.yaml
