appId: com.newroztech.gamewallet
tags:
  - smoke
  - regression
  - P0
  - Functional
---
#Runflow use for the first login file the this file is exceuted
- launchApp

#Using ENV LOgin the app
- runFlow:
    file: ../../flows/login_helper.yaml
    env:
      MOBILE_NUMBER: "${Mobile_Number}"
      PASSWORD: "${Password}"
- assertVisible:
    id: bannerImage
- tapOn:
    id: closeBtn

- runFlow:
    when:
      visible: TopUp
    commands:
      - tapOn: TopUp
- runFlow:
    when:
      visible: ZiGift Card
    commands:
      - tapOn: ZiGift Card
- assertVisible:
    id: ziGiftCardImageView

- assertVisible: Use the ZiGift cards to recharge your ZiWallet balance
- assertVisible: |-
    ZiGift Cards are available at POS and 
    Online across MENA. 
    Top up your ZiCharge balance instantly.
- assertVisible:
    id: posImageView

- assertVisible: Zi Gift Card PIN Number
- assertVisible: Please enter Zi gift voucher number

- tapOn: "Zi Gift Card PIN Number"
- inputText: "412680672927920"
- hideKeyboard

#- tapOn:
#  id: cardNumberLayout
#- inputText: "898538143825816"
#- hideKeyboard

- runFlow:
    when:
      visible: REDEEM
    commands:
      - assertVisible: REDEEM
      - tapOn: REDEEM


- runFlow:
    when:
      visible: "Topup Confirmation"
    commands:
      - assertVisible: "Topup Confirmation"
      - assertVisible: "IQD 5000.00 will be deposited to your account. Tap YES to confirm."
      - assertVisible: "CANCEL"
      - assertVisible: "YES, CONFIRM"
      - tapOn: "YES, CONFIRM"
      - runFlow:
                file: ../../flows/enter_your_pin.yaml

- runFlow:
    when:
      visible: "Whoops! Please find below errors -"
    commands:
      - assertVisible: "Whoops! Please find below errors -"
      - assertVisible: "Sorry! Cash Card is invalid."
      - assertVisible: "TRY AGAIN"
      - tapOn: "TRY AGAIN"

- runFlow:
    file: ../../flows/teardown.yaml